--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ li a {
 
 .img-profile {
     width: 100%;
-    max-width: 500px;
+    max-width: 300px;
     height: auto;
     border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -155,7 +155,7 @@ li a {
 }
 
 .parallax {
-    background-image: url(assets/img/MiBackground.png);
+    background-image: url(assets/img/MiBackground2.png);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
